se acomodo barra de bsqueda boton e icono

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="src\assets\img\fav-icon.png" />
+  <link rel="icon" type="image/svg+xml" href="src\assets\img\iniciales-blanco.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Santorini Resto. Restaurante de comida de alto nivel">
   <meta name="author" content="Luis Chehin, Farid Ale Ali, Pia Lopez, Nassahel Elias, Gonzalo, Milagro Rodriguez, Lautaro Hidalgo, Nancy Guaranca">
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-  <title>Santorini Resto</title>
+  <title>Santorini Restaurante</title>
 </head>
 
 <body>
