--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="./src/assets/img/iniciales-blanco.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Santorini Resto. Restaurante de comida de alto nivel">
-  <meta name="author" content="Luis Chehin, Farid Ale Ali, Pia Lopez, Nassahel Elias, Gonzalo, Milagro Rodriguez, Lautaro Hidalgo, Nancy Guaranca">
+  <meta name="author" content="Luis Chehin, Farid Ale Ali, Pia Lopez, Nassahel Elias, Milagro Rodriguez, Lautaro Hidalgo, Nancy Guaranca">
   <meta name="keywords" content="restaurant, comida, food, resto"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
